syntax = "proto3";
package DomainServices.HouseholdService.v1;
option csharp_namespace = "DomainServices.HouseholdService.Contracts.v1";

import "google/protobuf/empty.proto";
import "CustomerOnSA.proto";
import "CreateCustomer.proto";
import "CustomerOnSAIdRequest.proto";
import "GetCustomerList.proto";
import "UpdateCustomer.proto";
import "CreateIncome.proto";
import "IncomeIdRequest.proto";
import "GetIncomeList.proto";
import "Income.proto";
import "UpdateIncome.proto";
import "UpdateIncomeBaseData.proto";
import "ObligationIdRequest.proto";
import "Obligation.proto";
import "CreateObligation.proto";
import "GetObligationList.proto";
import "DeleteCustomer.proto";

service CustomerOnSAService {
    // zalozeni noveho customera
	rpc CreateCustomer (DomainServices.HouseholdService.CreateCustomerRequest) returns (DomainServices.HouseholdService.CreateCustomerResponse);
	
	// smazat
	rpc DeleteCustomer (DomainServices.HouseholdService.DeleteCustomerRequest) returns (google.protobuf.Empty);
	
	// get single
	rpc GetCustomer (DomainServices.HouseholdService.CustomerOnSAIdRequest) returns (DomainServices.HouseholdService.CustomerOnSA);
	
	// get list
	rpc GetCustomerList (DomainServices.HouseholdService.GetCustomerListRequest) returns (DomainServices.HouseholdService.GetCustomerListResponse);
	
	// update
	rpc UpdateCustomer (DomainServices.HouseholdService.UpdateCustomerRequest) returns (DomainServices.HouseholdService.UpdateCustomerResponse);

	// income part -------------------------------------------------------
    rpc CreateIncome (DomainServices.HouseholdService.CreateIncomeRequest) returns (DomainServices.HouseholdService.CreateIncomeResponse);

    rpc UpdateIncome (DomainServices.HouseholdService.UpdateIncomeRequest) returns (google.protobuf.Empty);

    rpc UpdateIncomeBaseData (DomainServices.HouseholdService.UpdateIncomeBaseDataRequest) returns (google.protobuf.Empty);

    rpc DeleteIncome (DomainServices.HouseholdService.IncomeIdRequest) returns (google.protobuf.Empty);

    rpc GetIncomeList (DomainServices.HouseholdService.GetIncomeListRequest) returns (DomainServices.HouseholdService.GetIncomeListResponse);

    rpc GetIncome (DomainServices.HouseholdService.IncomeIdRequest) returns (DomainServices.HouseholdService.Income);

	// obligations part
	rpc CreateObligation (DomainServices.HouseholdService.CreateObligationRequest) returns (DomainServices.HouseholdService.CreateObligationResponse);

    rpc UpdateObligation (DomainServices.HouseholdService.Obligation) returns (google.protobuf.Empty);

    rpc DeleteObligation (DomainServices.HouseholdService.ObligationIdRequest) returns (google.protobuf.Empty);

    rpc GetObligationList (DomainServices.HouseholdService.CustomerOnSAIdRequest) returns (DomainServices.HouseholdService.GetObligationListResponse);

    rpc GetObligation (DomainServices.HouseholdService.ObligationIdRequest) returns (DomainServices.HouseholdService.Obligation);
}